[package]
name = "leetcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.5.1"
fzf-wrapped = "0.1.3"
leetcode-derive = {path = "../leetcode-derive"}

# [[bin]]
# name = "leetcode_harness"
# path = "src/main.rs"

[lib]
name = "leetcode_sol"
path = "src/lib.rs"
